<resources>
    <string name="app_name">Happy Face</string>

    <string name="image">Image</string>
    <string name="chat">Contact</string>
    <string name="discounts">Discounts</string>
    <string name="favorite">Favorites</string>
    <string name="gifts">Gifts</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="search">Search</string>
    <string name="shopping_cart">Shopping cart</string>

    <string name="or">OR</string>
    <string name="email_here">Email</string>
    <string name="pass">Password</string>
    <string name="login">Log in</string>
    <string name="forgot_pass">forgot password ??</string>
    <string name="sign_up">Sign up</string>

    <string name="conf_pass">Confirm Pass</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>

    <string name="ok">OK</string>
    <string name="connection_error">Connection error</string>
    <string name="full_name">Full name</string>
    <string name="full_name_empty">Full name is empty</string>
    <string name="email_empty">Email is empty</string>
    <string name="email_mobile_empty">Email or mobile field is empty</string>
    <string name="password_empty">Password is empty</string>
    <string name="confirm_password_empty">Confirm Password is empty</string>
    <string name="password_doesnt_match">your passwords doesn\'t match</string>
    <string name="forgot">Forgot</string>
    <string name="google">Google+</string>
    <string name="facebook">Facebook</string>
    <string name="login_using_a_social_media_account">Login using a social media account</string>
    <string name="welcome">Welcome</string>
    <string name="verification_empty">Verification code is empty!</string>
    <string name="phone_empty">Phone is empty</string>
    <string name="block_empty">Block is empty</string>
    <string name="street_empty">Street is empty</string>
    <string name="houseno_empty">House is empty</string>
    <string name="please_enter_the_code_that_we_send_it_in_your_mobile">please, enter the code that we send it in your
        mobile
    </string>
    <string name="send_code">Send Code</string>
    <string name="reset_password_now">Reset password now</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm password</string>
    <string name="change">Change</string>
    <string name="password_invalid_error">Password must have upper and lower character and number min 8 chr max:255
    </string>
    <string name="email_doesnt_exist">Email doesn\'t exist</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort by:</string>
    <string name="low_price">Low price</string>
    <string name="high_price">High price</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="back">Back</string>
    <string name="videos">Videos</string>
    <string name="profile">Profile</string>
    <string name="sizes">Sizes</string>
    <string name="d_reviewers">%d reviewers</string>
    <string name="description">Description:</string>
    <string name="add_to_cart_s">Add to Cart</string>
    <string name="buy_now_s">Buy Now </string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="s_kwd">KWD</string>
    <string name="f_kwd">KWD</string>
    <string name="dis_s_kwd">Discount %s KWD</string>
    <string name="cart">Cart</string>
    <string name="total">Total</string>
    <string name="no_items_found">No items found</string>
    <string name="product_id_s">item code:</string>
    <string name="order">Order</string>
    <string name="messages">Messages</string>
    <string name="address">Address</string>
    <string name="governorate">Governorate</string>
    <string name="area">Area</string>
    <string name="block">Block</string>
    <string name="street">Street</string>
    <string name="avenue">Avenue</string>
    <string name="cancel">Cancel</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_s">Edit %s</string>
    <string name="sign_out">Sign out</string>
    <string name="skip">Skip</string>
    <string name="change_language">Change Language</string>
    <string name="message_content">Message Content</string>
    <string name="message">Message</string>
    <string name="add_promocode">Add Promocode</string>
    <string name="send">Send</string>
    <string name="select_color">Select Color</string>
    <string name="products">Products</string>
    <string name="account">Account</string>
    <string name="confirm_bill">Confirm Bill</string>
    <string name="thanks_for_using_happy_application">Thanks for using Happy Face application</string>
    <string name="sale">Sale</string>
    <string name="subcode_s">SubCode: %s</string>
    <string name="promo_code">Promo code</string>
    <string name="done_copied">Done copied to clipboard</string>
    <string name="you_have_a_gift">You have a gift:</string>
    <string name="tab_text_unselected_line" translatable="false"><![CDATA[<font color="#EA1F22"><b>%s<b/></font>]]></string>
    <string name="tab_text_selected_line" translatable="false"><![CDATA[<font color="#ffffff"><b>%s<b/></font>]]></string>
    <string name="product_information">Product information</string>
    <string name="product_sku">Product SKU</string>
    <string name="weight">Weight</string>
    <string name="recommended_age">Recommended Age</string>
    <string name="gender">Gender</string>
    <string name="girl">Girl</string>
    <string name="boy">Boy</string>
    <string name="remark_address">Remark Address</string>
    <string name="house_no">House</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="birthday_s">Birthday %s</string>
    <string name="checkout">Checkout</string>
    <string name="order_total">Order total</string>
    <string name="choose_from_covers">Choose from Covers : %s KWD</string>
    <string name="choose_from_cards">Choose from Cards : %s KWD</string>
    <string name="choose_from_additionals">Choose from Additionals : %s KWD</string>
    <string name="write_a_message">Write a Message</string>
    <string name="gift_covering">Gift covering</string>
    <string name="save">Save</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cover_id">Cover id:</string>
    <string name="to_s">To: %s</string>
    <string name="message_s">message: %s</string>
    <string name="from_s">From: %s </string>
    <string name="edit_additionals">Edit Additionals</string>
    <string name="add_additionals">Add Additionals</string>
    <string name="title_activity_maps">Map</string>
    <string name="current_location">Location on Map</string>
    <string name="current_location_s">Current Location:\n %f, %f</string>
    <string name="current_location_ss">Current Location:\n</string>
    <string name="confirm">Confirm</string>
    <string name="want_to_exit">Do you want to exit the application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_current_location">Choose Current Location</string>
    <string name="choose_area">Choose Area</string>
    <string name="address_details">Address Details</string>
    <string name="enter_your_address">Please Enter Your Address</string>
    <string name="block_">Block:</string>
    <string name="street_">Street:</string>
    <string name="house_no_">House:</string>
    <string name="floor_">Floor:</string>
    <string name="flat_">Flat:</string>
    <string name="flat">flat</string>
    <string name="floor">Floor</string>
    <string name="edit_profile">Edit Address</string>
    <string name="area_">Area:</string>
    <string name="avenue_">Avenue:</string>
    <string name="remark_address_">Remark Address:</string>
    <string name="data_updated_successfully">Data Updated Successfully</string>
    <string name="visa_knet">KNET</string>
    <string name="cash">CASH</string>
    <string name="discount">Discount</string>
    <string name="payment_method">Payment Method</string>
    <string name="thanks_for_using_abo100_application">Thanks for using Happy Face application</string>
    <string name="product_name"> product name</string>
    <string name="quantity">quantity</string>
    <string name="price_total">Total</string>
    <string name="price">Price</string>
    <string name="delivery_charge">delivery charge</string>
    <string name="order_">order</string>
    <string name="product_number">Product number:</string>
    <string name="color">color</string>
    <string name="shape">shape</string>

</resources>
