<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="false"
    xmlns:android="http://schemas.android.com/apk/res/android">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/happy"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="8dp"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="8dp"
                        android:hint="@string/email_here"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneLayout"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    app:hintEnabled="false">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="8dp"
                        android:padding="@dimen/_10sdp"
                        android:background="@drawable/roundedbuttondrawablewhite"
                        android:hint="@string/phone"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/govLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gov"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="8dp"
                        android:hint="@string/governorate"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/area"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/area"
                    android:spinnerMode="dialog" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/blockLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/block"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="8dp"
                        android:hint="@string/block"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/streetLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/street"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="8dp"
                        android:hint="@string/street"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/avenueLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/avenue"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="8dp"
                        android:hint="@string/avenue"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/remarkAddressLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/remarkAddress"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="8dp"
                        android:hint="@string/remark_address"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/houseNoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/houseNo"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="8dp"
                        android:hint="@string/house_no"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/gender"
                    android:textSize="@dimen/text_normal" />

                <RadioGroup
                    android:id="@+id/genderRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />
                </RadioGroup>

                <Button
                    android:id="@+id/birthdayButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/birthday"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/currentLocation"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/current_location"
                    android:textAllCaps="false" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="8dp"
                        android:hint="@string/pass"
                        android:padding="@dimen/_10sdp"
                        android:background="@drawable/roundedbuttondrawablewhite"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordLayout"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPassword"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="8dp"
                        android:hint="@string/conf_pass"
                        android:imeOptions="actionDone"
                        android:padding="@dimen/_10sdp"
                        android:background="@drawable/roundedbuttondrawablewhite"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/register"
                    style="@style/buttonCardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/buttonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/register" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    />

                <Button
                    android:id="@+id/skip"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/skip"
                    android:textSize="@dimen/text_normal" />

                <include layout="@layout/progress_layout" />

            </LinearLayout>

    </ScrollView>

