<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/gray"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    tools:ignore="RedundantNamespace">
    <TextView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="x"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_big"
        android:padding="@dimen/_10sdp"

        />
    <ImageView
        android:layout_width="120dp"
        android:layout_gravity="center"
        android:layout_height="120dp"
        android:src="@drawable/face_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanks_for_using_abo100_application"
        android:textSize="@dimen/text_normal"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/textColor"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order #12345"
        android:id="@+id/order_number"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAlignment="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_total"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/llayout_item"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="vertical"
        android:padding="5dp"
        />



    <LinearLayout
        android:id="@+id/deliveryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delivery_charge"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/delivery_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_big"

            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/discountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="visible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discount"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 KWD"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_normal"

            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/totalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="visible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="300"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_big" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="visible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment_method"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:id="@+id/payment_method"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_big"

            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Address"
        android:id="@+id/address"
        android:textSize="@dimen/text_normal"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/textColor"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAlignment="center"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/home"
        style="@style/buttonCardStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="8dp">

        <TextView
            style="@style/buttonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/home" />
    </androidx.cardview.widget.CardView>

</LinearLayout>
</androidx.core.widget.NestedScrollView>